# pyMEBM

./: MEBMclimoF.py  MEBMpertF.py  README.md  ebm.py  ebm_climatology.py  ebm_perturbation.py  environment.yml  setup.cfg  setup.py
pyMEBM/: MEBMpertF.py  ebm.py  ebm_climatology.py  ebm_perturbation.py
seasEBM/: T_init.mat  albedo_fdbck_annual.m  albedo_fdbck_seasonal.m  ebm.py  ebmfuncs.py  orbital_parameter_data.mat  seasEBM_fromMATLAB.py  setupfastM.m
